<resources>
    <string name="app_name">Movies</string>

    <string name="the_movie_db_url">https://api.themoviedb.org/3</string>


    <string name="picture_transition_name">Thumbnail to Activity</string>
    <string name="description">Description</string>
    <string name="actors">Actors</string>
    <string name="media">Media</string>
    <string name="top_rated">Top rated</string>
    <string name="popular">Popular</string>
    <string name="upcoming">Upcoming</string>
    <string name="character_label">Character:</string>
    <string name="actor_label">Actor:</string>
    <string name="user_rating">User Rating</string>
    <string name="facts">Facts</string>
    <string name="runtime">Runtime</string>
    <string name="release">Release</string>
    <string name="genre">Genre</string>
    <string name="budget">Budget</string>
    <string name="revenue">Revenue</string>
    <string name="close">Close</string>
    <string name="hour_short">h</string>
    <string name="minute_short">min</string>
    <string name="unknown">N/A</string>
    <string name="votes">votes</string>
    <string name="error_loading_movie">A Error occurred while loading the Movie. Please try again later</string>
    <string name="error_unknown">Something went Wrong!</string>
    <string name="error_unknown_description">Please try it again later.</string>
    <string name="error_no_connection">No Internet Connection!</string>
    <string name="error_no_connection_description">You are not connected to the Internet. Please restore the connection and try it again</string>
    <string name="trailer">Trailer</string>
    <string name="reviews">Reviews</string>
    <string name="txt_no_reviews">There are currently no reviews for this film :(</string>
    <string name="favorite">Favorite</string>
    <string name="no_favorites_title">No Favorites</string>
    <string name="no_favorites_description">You don\'t have any favorites yet. Mark some Movies as favorite and return back here</string>

</resources>
