<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_top_rated"
        android:enabled="true"
        android:icon="@drawable/ic_star_border_white_24dp"
        android:title="@string/top_rated"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_popular"
        android:enabled="true"
        android:icon="@drawable/ic_group_white_24dp"
        android:title="@string/popular"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_upcoming"
        android:enabled="true"
        android:icon="@drawable/ic_access_time_white_24dp"
        android:title="@string/upcoming"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_favorit"
        android:enabled="true"
        android:icon="@drawable/ic_favorite_border_white_24dp"
        android:title="@string/favorite"
        app:showAsAction="ifRoom" />
</menu>