<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_description"
        android:enabled="true"
        android:icon="@drawable/ic_info_outline_white_24dp"
        android:title="@string/description"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_actors"
        android:enabled="true"
        android:icon="@drawable/ic_recent_actors_white_24dp"
        android:title="@string/actors"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_media"
        android:enabled="true"
        android:icon="@drawable/ic_perm_media_white_24dp"
        android:title="@string/media"
        app:showAsAction="ifRoom" />
</menu>