<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">


        <com.example.android.movies.Views.CircularRatingBar
            android:id="@+id/user_rating_bar"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginBottom="16dp" />

        <TextView
            android:id="@+id/user_rating_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/user_rating"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@id/user_rating_bar"
            app:layout_constraintLeft_toRightOf="@id/user_rating_bar"
            app:layout_constraintTop_toTopOf="@id/user_rating_bar" />

        <TextView
            android:id="@+id/user_rating_count_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:textColor="@color/secondary_text"
            android:textSize="12sp"
            app:layout_constraintLeft_toRightOf="@id/user_rating_bar"
            app:layout_constraintTop_toBottomOf="@id/user_rating_text"
            tools:text="125.000 Votes" />


        <android.support.v7.widget.CardView
            android:id="@+id/description_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:cardBackgroundColor="@color/white"
            app:cardElevation="8dp"
            app:contentPadding="16dp"
            app:layout_constraintTop_toBottomOf="@id/user_rating_bar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/description" />

                <TextView
                    android:id="@+id/txt_overview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="8dp"
                    android:textSize="18sp"
                    tools:text="Test beschreibung die viel zu kurz ist, aber was solls?" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:cardBackgroundColor="@color/white"
            app:cardElevation="8dp"
            app:contentPadding="16dp"
            app:layout_constraintTop_toBottomOf="@id/description_container">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/facts" />

                <TextView
                    style="@style/SubHeaderTheme"
                    android:text="@string/runtime" />

                <TextView
                    android:id="@+id/txt_runtime"
                    style="@style/DefaultTextCard"
                    tools:text="2:32" />

                <TextView
                    style="@style/SubHeaderTheme"
                    android:text="@string/release" />

                <TextView
                    android:id="@+id/txt_release"
                    style="@style/DefaultTextCard"
                    tools:text="20.04.2016" />

                <TextView
                    style="@style/SubHeaderTheme"
                    android:text="@string/genre" />

                <HorizontalScrollView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp">

                    <LinearLayout
                        android:id="@+id/container_genre"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                    </LinearLayout>
                </HorizontalScrollView>

                <TextView
                    style="@style/SubHeaderTheme"
                    android:text="@string/budget" />

                <TextView
                    android:id="@+id/txt_budget"
                    style="@style/DefaultTextCard"
                    tools:text="$200,000,000.00" />

                <TextView
                    style="@style/SubHeaderTheme"
                    android:text="@string/revenue" />

                <TextView
                    android:id="@+id/txt_revenue"
                    style="@style/DefaultTextCard"
                    tools:text="$1,325,937,250.00" />

            </LinearLayout>
        </android.support.v7.widget.CardView>
    </android.support.constraint.ConstraintLayout>

</android.support.v4.widget.NestedScrollView>